[package]
name = "reward-center-cli"
description = "A Metaplex auctioneer program that distributes spl token to the buyer and seller of NFTs"
version = "0.2.8"
edition = "2021"
repository = "https://github.com/moteylabs/reward-center-program"
license = "GPL-3.0-or-later"

[dependencies]
anchor-lang = "0.27.0"
anyhow = "1.0.65"
bs58 = "0.4.0"
clap = { version = "4.0.18", features = ["derive"] }
dirs = "4.0.0"
env_logger = "0.10.0"
mtly-reward-center = { path = "../program", features = ["no-entrypoint"] }
mtly-reward-center-sdk = { path = "../sdk/reward-center" }
log = "0.4.17"
mtly-auction-house = { version = "1.4.8", features = ["cpi", "no-entrypoint"] }
mtly-auction-house-sdk = { path = "../sdk/auction-house" }
mpl-token-auth-rules = { version = "1.2.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.10.0", features = ["no-entrypoint"] }
retry = "2.0.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
serde_yaml = "0.9.13"
solana-address-lookup-table-program = "=1.14.13"
solana-client = "=1.14.13"
solana-program = "=1.14.13"
solana-sdk = "=1.14.13"
spl-associated-token-account = "1.1.2"
spl-token = { version = "3.5", features = ["no-entrypoint"] }
