[package]
name = "mtly-auction-house-sdk"
version = "1.4.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mtly-auction-house = { version = "1.4.8", features = ["no-entrypoint"] }
anchor-lang = "0.27.0"
anchor-client = "0.27.0"
anchor-spl = "0.27.0"
