[package]
name = "mtly-reward-center-sdk"
version = "0.2.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mtly-reward-center = { path = "./../../program", features = ["no-entrypoint"]}
mtly-auction-house = { version = "1.4.7", features = ["no-entrypoint"]}
anchor-lang = "0.27.0"
anchor-client = "0.27.0"
spl-associated-token-account = { version = "1.1.2", features = ["no-entrypoint"] }
spl-token = { version = "3.5",  features = ["no-entrypoint"] }
